display a calendar heatmap showing the number of purchases

--- a/public/content/css/main.css
+++ b/public/content/css/main.css
@@ -2,47 +2,81 @@
   padding: 25px;
 }
 
-#search-form{
+#search-form {
   margin-bottom: 20px;
 }
 
-.table > tbody > tr > td {
-     vertical-align: middle;
+#calendarPanelBody {
+  max-height: 300px !important;
+}
+
+#noData {
+  text-align: center !important;
+}
+
+.table>tbody>tr>td {
+  vertical-align: middle;
+}
+
+.month {
+  fill: none;
+  stroke: #000;
+  stroke-width: 2px;
+}
+
+.day {
+  fill: #fff;
+  stroke: #ccc;
+}
+
+.dayLabel {
+  fill: black;
+}
+
+.monthLabel {
+  text-anchor: middle;
+  fill: black;
+}
+
+.yearLabel {
+  fill: black;
+  font-size: 1.2em;
 }
 
 .spinner {
   -webkit-animation: rotator 1.4s linear infinite;
-          animation: rotator 1.4s linear infinite;
+  animation: rotator 1.4s linear infinite;
 }
 
 @-webkit-keyframes rotator {
   0% {
     -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   100% {
     -webkit-transform: rotate(270deg);
-            transform: rotate(270deg);
+    transform: rotate(270deg);
   }
 }
 
 @keyframes rotator {
   0% {
     -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   100% {
     -webkit-transform: rotate(270deg);
-            transform: rotate(270deg);
+    transform: rotate(270deg);
   }
 }
+
 .path {
   stroke-dasharray: 187;
   stroke-dashoffset: 0;
   -webkit-transform-origin: center;
-          transform-origin: center;
+  transform-origin: center;
   -webkit-animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
-          animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
+  animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
 }
 
 @-webkit-keyframes colors {
@@ -80,6 +114,7 @@
     stroke: #4285F4;
   }
 }
+
 @-webkit-keyframes dash {
   0% {
     stroke-dashoffset: 187;
@@ -87,14 +122,15 @@
   50% {
     stroke-dashoffset: 46.75;
     -webkit-transform: rotate(135deg);
-            transform: rotate(135deg);
+    transform: rotate(135deg);
   }
   100% {
     stroke-dashoffset: 187;
     -webkit-transform: rotate(450deg);
-            transform: rotate(450deg);
+    transform: rotate(450deg);
   }
 }
+
 @keyframes dash {
   0% {
     stroke-dashoffset: 187;
@@ -102,11 +138,11 @@
   50% {
     stroke-dashoffset: 46.75;
     -webkit-transform: rotate(135deg);
-            transform: rotate(135deg);
+    transform: rotate(135deg);
   }
   100% {
     stroke-dashoffset: 187;
     -webkit-transform: rotate(450deg);
-            transform: rotate(450deg);
+    transform: rotate(450deg);
   }
 }
